--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -1,12 +1,29 @@
 <header class="header">
 	<div class="header__container">
-		<div class="header__menu menu">
-			<button type="button" class="menu__icon icon-menu"><span></span></button>
-			<nav class="menu__body">
-				<ul class="menu__list">
-					<li class="menu__item"><a href="" class="menu__link"></a></li>
-				</ul>
-			</nav>
+		<div class="header__logo"><img src="@img/header/logo.svg" alt=""></div>
+		<div class="header__table-button"></div>
+		<a href="#" data-da=".header__actions, 1024.98, 1" class="header__city">Нур-Султан</a>
+		<div class="header__actions">
+			<div class="header__menu menu">
+				<button data-da=".header__table-button, 1024.98, 1" type="button" class="menu__icon icon-menu"><span></span></button>
+				<nav class="menu__body">
+					<ul class="menu__list">
+						<li class="menu__item"><a href="" class="menu__link">Главная</a></li>
+						<li class="menu__item"><a href="" class="menu__link">О компании</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Товары</a></li>
+						<li class="menu__item"><a href="" class="menu__link">Как сделать заказ?</a></li>
+						<li class="menu__item"><a href="" class="menu__link">FAQ</a></li>
+					</ul>
+				</nav>
+			</div>
+			<button type="submit" class="header__button">Войти</button>
+			<div class="header__cart">
+				<img src="@img/header/cart.svg" alt="">
+			</div>
+			<a  href="#" class="header__lang lang">
+				<img src="@img/header/russia 1.svg" alt="русский">
+				<span>RU</span>
+			</a>
 		</div>
 	</div>
 </header>
