--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,15 @@
 <footer class="footer">
 	<div class="footer__container">
+		<div class="footer__content">
+			Контакты <span>+7-775-030-00-98</span>
+		</div>
+		<div class="footer__social">
+			<a href="#" class="footer__link"><img src="@img/footer/faebook.svg" alt="faebook"></a>
+			<a href="#" class="footer__link"><img src="@img/footer/insta.svg" alt="insta"></a>
+			<a href="#" class="footer__link"><img src="@img/footer/twitter.svg" alt="twitter"></a>
+		</div>
+		<div class="footer__content">
+			Мы находимся <span>г.Актобе, 41 разъезд, дом 9В</span>
+		</div>
 	</div>
 </footer>
