--- a/src/index.html
+++ b/src/index.html
@@ -8,19 +8,21 @@
 			@@include('html/_header.htm',{})
 			<main class="page">
 				<section class="page__main-block main-block">
-					<div class="main-block__container">
-						<div class="main-block__content">
-							<div class="main-block__pretitle">Позвольте себе не тратить время и деньги стоя в очередях.</div>
-							<h1 class="main-block__title">Единый портал закупок<br> отрубей в Казахстане </h1>
-							<div class="main-block__text">Регистрируйтесь, заказывайте онлайн с доставкой/самовывозом<br> в течение дня. Отруби ограничены количеством!</div>
-							<div class="main-block__actions">
-								<a href="#" type="submit" class="main-block__button button">Сделать заказ</a>
-								<a href="tel:+77750300098" class="main-block__tel">+7 775 030-00-98</a>
+					<div class="main-block__content">
+						<div class="main-block__container">
+							<div class="main-block__body">
+								<div class="main-block__pretitle">Позвольте себе не тратить время и деньги стоя в очередях.</div>
+								<h1 class="main-block__title">Единый портал закупок<br> отрубей в Казахстане </h1>
+								<div class="main-block__text">Регистрируйтесь, заказывайте онлайн с доставкой/самовывозом<br> в течение дня. Отруби ограничены количеством!</div>
+								<div class="main-block__actions">
+									<a href="#" type="submit" class="main-block__button button">Сделать заказ</a>
+									<a href="tel:+77750300098" class="main-block__tel">+7 775 030-00-98</a>
+								</div>
 							</div>
 						</div>
-						<div class="main-block__img">
-							<div><img src="@img/main/bg.png" alt="otrubi"></div>
-						</div>
+					</div>
+					<div class="main-block__img">
+						<img src="@img/main/bg.png" alt="otrubi">
 					</div>
 				</section>
 			</main>
