--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 							<div class="main-block__body">
 								<div class="main-block__pretitle">Позвольте себе не тратить время и деньги стоя в очередях.</div>
 								<h1 class="main-block__title">Единый портал закупок<br> отрубей в Казахстане </h1>
-								<div class="main-block__text">Регистрируйтесь, заказывайте онлайн с доставкой/самовывозом<br> в течение дня. Отруби ограничены количеством!</div>
+								<div class="main-block__text">Регистрируйтесь, заказывайте онлайн с доставкой/самовывозом <span><br></span> в течение дня. Отруби ограничены количеством!</div>
 								<div class="main-block__actions">
 									<a href="#" type="submit" class="main-block__button button">Сделать заказ</a>
 									<a href="tel:+77750300098" class="main-block__tel">+7 775 030-00-98</a>
@@ -23,6 +23,16 @@
 					</div>
 					<div class="main-block__img">
 						<img src="@img/main/bg.png" alt="otrubi">
+					</div>
+				</section>
+				<section class="page__site site">
+					<div class="site__container">
+						<div class="site__name">
+							<a href="#" class="site__link">kebek<span>.kz</span></a>
+						</div>
+						<div class="site__text">
+							удобный сервис, где вы покупаете отруби у крупных мелькомбинатов Казахстана, представленных на рынке более 20 лет.
+						</div>
 					</div>
 				</section>
 			</main>
