--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,46 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__sort sort">
+					<div class="sort__container">
+						<div class="sort__picture">
+							<div class="sort__cirkle">
+								<div class="sort__item sort__item_one">
+									<div class="sort__body">
+										<div class="sort__img">
+											<img src="@img/main/sort2.png" alt="">
+										</div>
+										<div class="sort__title">Отруби в мешках</div>
+										<div class="sort__cost">85 ₸ <span>за 1 кг.</span></div>
+									</div>
+								</div>
+								<div class="sort__item sort__item_two">
+									<div class="sort__body">
+										<div class="sort__img">
+											<img src="@img/main/sort1.png" alt="">
+										</div>
+										<div class="sort__title">Отруби россыпью</div>
+										<div class="sort__cost">75 ₸ <span>за 1 кг.</span></div>
+										
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="sort__content content-sort">
+							<h2 class="content-sort__title">Покупайте у проверенных производителей</h2>
+							<div class="content-sort__subtitle">Отруби - это твердый внешний слой зерна, содержащий различные питательными вещества и клетчатку.</div>
+							<div class="content-sort__text">Мы создали доступные и комфортные условия, чтобы вы могли приобретать продукцию напрямую у мелькомбинатов. Вам больше не придется искать и созваниваться с поставщиками самостоятельно. 
+								<p>Все, что нужно сделать – оставить заявку на покупку на нашем сайте.</p>
+							</div>
+							<button type="submit" class="content-sort__button button">Оставить заявку</button>
+						</div>
+					</div>
+				</section>
+				<section class="page__product product">
+					<div class="product__container">
+						
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
