--- a/src/index.html
+++ b/src/index.html
@@ -317,6 +317,27 @@
 						</div>
 					</div>
 				</section>
+				<section class="page__bastsale bastsale">
+					<div class="bastsale__content">
+						<div class="bastsale__container">
+							<div class="bastsale__body">
+								<h2 class="bastsale__title">Мы предлагаем вам наилучшие условия для покупок!</h2>
+								<div class="bastsale__text">Приобретайте качественный продукт у лучших производителей Казахстана. Оформляйте<br> заказ быстро и удобно!</div>
+								<!-- <div class="bastsale__actions">
+									<a href="#" type="submit" class="bastsale__button button">Сделать заказ</a>
+									<a href="tel:+77750300098" class="bastsale__tel">+7 775 030-00-98</a>
+								</div> -->
+								<div class="main-block__actions">
+									<a href="#" type="submit" class="main-block__button button">Сделать заказ</a>
+									<a href="tel:+77750300098" class="main-block__tel">+7 775 030-00-98</a>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="bastsale__img">
+						<img src="@img/main/ded.png" alt="ghjg">
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
