--- a/src/index.html
+++ b/src/index.html
@@ -323,10 +323,6 @@
 							<div class="bastsale__body">
 								<h2 class="bastsale__title">Мы предлагаем вам наилучшие условия для покупок!</h2>
 								<div class="bastsale__text">Приобретайте качественный продукт у лучших производителей Казахстана. Оформляйте<br> заказ быстро и удобно!</div>
-								<!-- <div class="bastsale__actions">
-									<a href="#" type="submit" class="bastsale__button button">Сделать заказ</a>
-									<a href="tel:+77750300098" class="bastsale__tel">+7 775 030-00-98</a>
-								</div> -->
 								<div class="main-block__actions">
 									<a href="#" type="submit" class="main-block__button button">Сделать заказ</a>
 									<a href="tel:+77750300098" class="main-block__tel">+7 775 030-00-98</a>
@@ -335,7 +331,8 @@
 						</div>
 					</div>
 					<div class="bastsale__img">
-						<img src="@img/main/ded.png" alt="ghjg">
+						<img src="@img/main/ded.png" alt="">
+						<img src="@img/main/ded1.png" alt="">
 					</div>
 				</section>
 			</main>
