--- a/src/index.html
+++ b/src/index.html
@@ -322,10 +322,10 @@
 						<div class="bastsale__container">
 							<div class="bastsale__body">
 								<h2 class="bastsale__title">Мы предлагаем вам наилучшие условия для покупок!</h2>
-								<div class="bastsale__text">Приобретайте качественный продукт у лучших производителей Казахстана. Оформляйте<br> заказ быстро и удобно!</div>
+								<div class="bastsale__text">Приобретайте качественный продукт у лучших производителей Казахстана. Оформляйте заказ быстро и удобно!</div>
 								<div class="main-block__actions">
-									<a href="#" type="submit" class="main-block__button button">Сделать заказ</a>
-									<a href="tel:+77750300098" class="main-block__tel">+7 775 030-00-98</a>
+									<a href="#" type="submit" class="bastsale__button main-block__button button">Сделать заказ</a>
+									<a href="tel:+77750300098" class="bastsale__tel main-block__tel">+7 775 030-00-98</a>
 								</div>
 							</div>
 						</div>
