--- a/src/index.html
+++ b/src/index.html
@@ -335,6 +335,86 @@
 						<img src="@img/main/ded1.png" alt="">
 					</div>
 				</section>
+				<section class="page__faq faq">
+					<div class="faq__container">
+						<div class="faq__top">
+							<h2 class="faq__title">FAQ</h2>
+							<div class="faq__text">Если у вас есть свой вопрос, обращайтесь по номеру:<span><br></span>
+								 <a href="tel:+77750300098" class="faq__link">+7 775 030-00-98</a></div>
+						</div>
+						<div data-spollers class="faq__spollers spollers">
+							<div class="spollers__column">
+								<div class="spollers__item">
+									<button type="button" data-spoller class="spollers__title">
+										<div class="spollers__img"><img src="@img/main/arrow.svg" alt=""></div>
+										<div class="spollers__button-text">Способы оплаты</div>
+									</button>
+									<div class="spollers__body">
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Физическим лицам:</h4>
+											<div class="spollers__body-text">Касса, оплата через kaspi, банковской картой.</div>
+										</div>
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Юридическим лицам:</h4>
+											<div class="spollers__body-text">Касса, оплата через kaspi, банковской картой, перечисление в Банке.</div>
+										</div>
+									</div>
+								</div>
+								<div class="spollers__item">
+									<button type="button" data-spoller class="spollers__title">
+										<div class="spollers__img"><img src="@img/main/arrow.svg" alt=""></div>
+										<div class="spollers__button-text">Где мы находимся</div>
+									</button>
+									<div class="spollers__body">
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Физическим лицам:</h4>
+											<div class="spollers__body-text">Касса, оплата через kaspi, банковской картой.</div>
+										</div>
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Юридическим лицам:</h4>
+											<div class="spollers__body-text">Касса, оплата через kaspi, банковской картой, перечисление в Банке.</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="spollers__column">
+								<div class="spollers__item">
+									<button type="button" data-spoller class="spollers__title">
+										<div class="spollers__img"><img src="@img/main/arrow.svg" alt=""></div>
+										<div class="spollers__button-text">Сколько я могу купить</div>
+									</button>
+									<div class="spollers__body">
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Физическим лицам:</h4>
+											<div class="spollers__body-text">Касса, оплата через kaspi, банковской картой.</div>
+										</div>
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Юридическим лицам:</h4>
+											<div class="spollers__body-text">Касса, оплата через kaspi, банковской картой, перечисление в Банке.</div>
+										</div>
+									</div>
+								</div>
+								<div class="spollers__item">
+									<button type="button" data-spoller class="spollers__title">
+										<div class="spollers__img"><img src="@img/main/arrow.svg" alt=""></div>
+										<div class="spollers__button-text">Как производится доставка</div>
+									</button>
+									<div class="spollers__body">
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Самовывоз:</h4>
+											<div class="spollers__body-text">после оплаты вам придет SMS-уведомление об успешной сделке
+												и скан с QR-кодом. При въезде на объект необходимо будет показать QR-код сотрудникам компании и забрать свой заказ.</div>
+										</div>
+										<div class="spollers__content">
+											<h4 class="spollers__subtitle">Доставка</h4>
+											<div class="spollers__body-text">после оплаты вам придет SMS-уведомление об успешной сделке и информация о времени прибытия заказа.</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@@include('html/_footer.htm',{})
 		</div>
