--- a/src/index.html
+++ b/src/index.html
@@ -84,7 +84,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort2.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort2.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби в мешках</div>
 										<div class="product__range-body">
@@ -107,7 +109,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort3.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort3.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби россыпью</div>
 										<div class="product__range-body">
@@ -132,7 +136,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort2.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort2.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби в мешках</div>
 										<div class="product__range-body">
@@ -155,7 +161,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort3.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort3.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби россыпью</div>
 										<div class="product__range-body">
@@ -180,7 +188,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort2.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort2.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби в мешках</div>
 										<div class="product__range-body">
@@ -203,7 +213,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort3.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort3.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби россыпью</div>
 										<div class="product__range-body">
@@ -228,7 +240,9 @@
 											</a>
 										</div>
 										<div class="product__img">
-											<img src="@img/main/sort2.png" alt="">
+											<div class="product__ibg -ibg">
+												<img src="@img/main/sort2.png" alt="">
+											</div>
 										</div>
 										<div class="product__title">Отруби в мешках</div>
 										<div class="product__range-body">
