--- a/src/index.html
+++ b/src/index.html
@@ -345,8 +345,8 @@
 						</div>
 					</div>
 					<div class="bastsale__img">
-						<img src="@img/main/ded.png" alt="">
-						<img src="@img/main/ded1.png" alt="">
+						<img class="ded01" src="@img/main/ded.png" alt="">
+						<img class="ded02" src="@img/main/ded1.png" alt="">
 					</div>
 				</section>
 				<section class="page__faq faq">
